# NGDBench

./: README.md  pyproject.toml
configs/: default_config.yaml
data_gen/data_analyser/: run_case.py
data_gen/graph_gen/: graph_builder_autokg.py  run.py
data_gen/perturbation_generator/perturb_record/: example_record.json  semantic_SemanticPerturbationGenerator_test_20251226_064927.json
pipeline/dataset_constructor/: README.md  __init__.py  case.md  case_builders.py  cleaning.py  cli.py  constructor.py  cypher_rewrite.py  dataset_config_loader.py  mcp_mentions.py  neo4j_executor.py  test_mcp_mentions.py  test_translation_and_translate_only.py  translation.py  unstructured.py  unstructured_answer_judge.py
pipeline/dataset_constructor/config/: dataset_config_econ.json  dataset_config_econ_nagg.json  dataset_config_mcp.json
pipeline/db_builder/: __init__.py  build_base.py  check_db.py  clear_db.py  test_build.py
pipeline/handler/: translate.py  translate_unstructure.py  unstructured_valid.py
pipeline/query_gen/: export_mention_in_targets.py  export_nodes_sample.py  management_test.py  migrate_params.py  qgen_test.py  qgen_test_noise.py  requirement.md
pipeline/query_gen/generator/: manage_generator.py  query_generator.py
pipeline/query_gen/primekg/: noise_queries.json
pipeline/query_gen/query_template/: template.json  template_agg.json  template_agg_unstructured.json  template_managemet.json  template_mcp1.json
pipeline/query_module/: __init__.py  anti_exe.py  noise_exe.py  unstructured_exe.py
scripts/ldbc_snb_bi/: ldbc_snb_bi_prepare.sh
(+6 files in other folders)
