[project]
name = "ngdb-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.28.2",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.2",
]
